fixed dark mode

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -37,8 +37,8 @@
 @media (prefers-color-scheme:dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 100, 100, 100;
-    --background-end-rgb: 20, 20, 20;
+    --background-start-rgb: 200, 200, 200;
+    --background-end-rgb: 60, 60, 60;
 
     --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
     --secondary-glow: linear-gradient(to bottom right,
